# dewey

./: .gitignore  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/core/: .gitignore  Cargo.toml
crates/core/src/: cache.rs  config.rs  dbio.rs  hnsw.rs  ledger.rs  lib.rs  logger.rs  message.rs  openai.rs  parsing.rs  test_common.rs
crates/regression/: Cargo.toml
crates/regression/src/: main.rs
dewey/: Cargo.toml
dewey/src/: cache.rs  dbio.rs  hnsw.rs  ledger.rs  lib.rs  main.rs  message.rs  openai.rs  serialization.rs  server.rs
serialize_macros/: Cargo.toml
src/: btree.rs  config.rs  dbio.rs  hnsw.rs  ledger.rs  logger.rs  main.rs  openai.rs  testing
